@@ -5,7 +5,7 @@
 Terraria Forum link: [Here](https://forums.terraria.org/index.php?threads/pings-create-point-of-interest-markers.103777/)
 
 Enemies, resources, and other interesting objects can be **marked** using a bindable hotkey, creating a "point of interest" (referred to as "ping").
-The locations of marked creatures and objects are visible in the world and on the world map, making it a useful tool for alerting teammates to the location of enemies or loot.
+The locations of marked creatures and objects are visible in the world and on the map, making it a useful tool for alerting teammates to the location of enemies or loot.
 
 Pinging NPCs has the benefit of stopping them from despawning if no players are in range.
 
@@ -23,9 +23,6 @@ Things you can ping:
 * Dropped items
 
 Duration, limit and cooldown of pings are configurable in the server config, ping visuals in the client config.
-
-Credits:
-* _hamstar_ for map draw code
 
 ## Localization
 If you wish to contribute translations, visit the [tML wiki page](https://github.com/tModLoader/tModLoader/wiki/Localization) on that.
