@@ -1,5 +1,5 @@
 Enemies, resources, and other interesting objects can be [b]marked[/b] using a bindable hotkey, creating a "point of interest" (referred to as "ping").
-The locations of marked creatures and objects are visible in the world and on the world map, making it a useful tool for alerting teammates to the location of enemies or loot.
+The locations of marked creatures and objects are visible in the world and on the map, making it a useful tool for alerting teammates to the location of enemies or loot.
 
 Pinging NPCs has the benefit of stopping them from despawning if no players are in range.
 
