@@ -1,3 +1,6 @@
 * Updated to 1.4.4 tml
+* Pings now display on the minimap
+* Pings now have consistent mouseover distance (regardless of map zoom)
+* Enemy/Critter pings now always face left (TML limitation)
 * Fixed some ping names not having spaces in them
 * Now localizable. Read the mod description for more info
